--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "insert-cef": "ts-node download-files/insertData.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "csv-parser": "^3.0.0",
+    "iconv-lite": "^0.6.3",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "puppeteer": "^22.7.0",
