--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:YtWbd576m5yjjOgaTFhJ@89.117.32.85:5432/leilao_express?schema=public"
+API_URL="http://localhost:3000"
