--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:YtWbd576m5yjjOgaTFhJ@89.117.32.85:5432/leilao_express?schema=public"
+DATABASE_URL="postgresql://postgres:YtWbd576m5yjjOgaTFhJ@localhost:5432/leilao_express?schema=public"
+API_URL="http://localhost:3000"
