Add PRD NEXTAUTH URL

--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,4 @@
 
 DATABASE_URL="postgresql://postgres:YtWbd576m5yjjOgaTFhJ@localhost:5432/leilao_express?schema=public"
 API_URL="http://localhost:3000"
+NEXTAUTH_URL=http://balao.cloud
