--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 DATABASE_URL="postgresql://postgres:YtWbd576m5yjjOgaTFhJ@localhost:5432/leilao_express?schema=public"
-NEXTAUTH_URL=http://balao.cloud
+NEXTAUTH_URL=https://balao.cloud
