--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.19.3",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "csv-parser": "^3.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.1.1",
     "embla-carousel-react": "^8.0.4",
     "iconv-lite": "^0.6.3",
     "input-otp": "^1.2.4",
@@ -63,6 +65,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-places-autocomplete": "^4.0.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
